.vscode/allianceuat_compare/force-app/main/default/objects/ContentVersion/fields/csfiles__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>csfiles__Expiration_Date__c</fullName>
    <description>The date that the File expires and will be removed.</description>
    <inlineHelpText>The date that the File expires and will be removed.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>