.vscode/allianceuat_compare/force-app/main/default/objects/ContentVersion/fields/csfiles__Filename__c.field-meta.xml
<CustomField>
    <fullName>csfiles__Filename__c</fullName>
    <description>The Filename for the File in the CS Files AWS solution. Automatically set, do not update.</description>
    <inlineHelpText>The Filename for the File in the CS Files AWS solution. Automatically set, do not update.</inlineHelpText>
    <label>Filename</label>
    <length>64</length>
    <type>Text</type>
</CustomField>