.vscode/allianceuat_compare/force-app/main/default/objects/ContentVersion/fields/csfiles__Is_CSFile__c.field-meta.xml
<CustomField>
    <fullName>csfiles__Is_CSFile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether this File is a CloudSands File</description>
    <inlineHelpText>Identifies whether this File is a CloudSands File</inlineHelpText>
    <label>Is CSFile</label>
    <type>Checkbox</type>
</CustomField>