.vscode/allianceuat_compare/force-app/main/default/objects/ContentVersion/fields/csfiles__Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>csfiles__Transfer_Status__c</fullName>
    <description>The status of the CS Files transfer. Only used if the file is marked as a CSFile.</description>
    <inlineHelpText>The status of the CS Files transfer. Only used if the file is marked as a CSFile.</inlineHelpText>
    <label>Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress - Creating CS File</fullName>
            </value>
            <value>
                <fullName>In Progress - Transferring Out</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>