.vscode/allianceuat_compare/force-app/main/default/objects/ContentVersion/fields/tc9_ec__Public_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_ec__Public_URL__c</fullName>
    <description>copy the public url generated here so that community users can preview files</description>
    <label>Public URL</label>
    <type>Url</type>
</CustomField>