.vscode/allianceuat_compare/force-app/main/default/objects/ContentVersion/fields/tc9_pr__Public_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Public_URL__c</fullName>
    <description>Holds the value of the Public URL generated for Files so that it can be used in Communities for viewing Files</description>
    <inlineHelpText>Holds the value of the Public URL generated for Files so that it can be used in Communities for viewing Files</inlineHelpText>
    <label>Public URL</label>
    <type>Url</type>
</CustomField>